--- a/index.html
+++ b/index.html
@@ -193,6 +193,73 @@
       </div>
     </section>
 
+    <section id="watch">
+      <div class="watchItem">
+        <img src="./assets/images/watch1.webp" alt="">
+      </div>
+      <div class="watchItem">
+        <img src="./assets/images/watch2.webp" alt="">
+      </div>
+      <div class="watchItem">
+        <img src="./assets/images/watch3.webp" alt="">
+      </div>
+    </section>
+
+    <section id="asNavfor">
+      <div class="container wrapper">
+        <div class="slider">
+          <div class="mainslider">
+            <div class="item-slider">
+              <div class="items">
+                <img src="./assets/images/asnavfor.jpg" alt="">
+              </div>
+              <div class="items">
+                <img src="./assets/images/asnavfor1.jpg" alt="">
+              </div>
+            </div>
+            <div class="star"><img src="./assets/images/star.svg" alt=""></div>
+            <div class=" gear"><img src="./assets/images/gear.svg" alt=""></div>
+            <div class="line"><img src="./assets/images/lines.svg" alt=""></div>
+          </div>
+          <div class="mainslider1">
+            <div class="text-slider">
+              <div class="items">
+                <h1>
+                  What Our Students <br> Say About Us.
+                </h1>
+                <img src="./assets/images/quote.png" alt="">
+                <p>
+                  “ when an unknown printer took a galley of type and scrambled to make a type specimen book. It has survived not only five centuries, but also the leap into electronic.”
+                </p>
+                <div class="ddesig">
+                  <h3>m hossain</h3>
+                  <h4>web designer</h4>
+                </div>
+              </div>
+              <div class="items">
+                <h1>
+                  What Our Students <br> Say About Us.
+                </h1>
+                <img src="./assets/images/quote.png" alt="">
+                <p>
+                  “ when an unknown printer took a galley of type and scrambled to make a type specimen book. It has survived not only five centuries, but also the leap into electronic.”
+                </p>
+                <div class="ddesig">
+                  <h3>m hossain</h3>
+                  <h4>web designer</h4>
+                </div>
+              </div>
+            </div>
+            <div class="asnavbtn">
+              <i class="fa-solid fa-chevron-left"></i>
+              <i class="fa-solid fa-chevron-right"></i>
+            </div>
+          </div>
+  
+        </div>
+      </div>
+    </section>
+
     
     <script src="./js/code.jquery.com_jquery-1.12.4.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
